--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,14 +48,14 @@ body {
 }
 
 #profile-pic-wrapper {
-  width: 20vh;
-  height: 20vh;
+  width: 10vw;
+  height: 10vw;
   object-fit: cover;
 }
 
 .sidebar-menu-collapsed #profile-pic-wrapper {
-  width: 25vh;
-  height: 25vh;
+  width: 12vw;
+  height: 12vw;
   object-fit: cover;
 }
 
