--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -77,7 +77,7 @@
                                             data-parent="#accordionExample">
                                             <div class="card-body para__style">
                                                 <div class="row justify-content-center">
-                                                    <div class="col-md-2">
+                                                    <div class="col-lg-2">
                                                         <div class="row">
                                                             <div class="col-12 text-center">
                                                                 <img src="{{#if admin.profilePic}}/images/admin/{{admin._id}}.jpg{{else}}/images/admin/admin-logo.png{{/if}}"
@@ -151,7 +151,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-6">
+                                                    <div class="col-lg-6">
                                                         <button
                                                             class="btn btn-link text-decoration-none font-weight-bold float-right"
                                                             id="edit" onclick="editAdminDetails(event);">Edit</button>
