Modified edit show functions, now you can select available time slots based on the date

--- a/views/theatre/add-shows.hbs
+++ b/views/theatre/add-shows.hbs
@@ -51,7 +51,8 @@
                                                 <label for="date">Date</label>
                                             </div>
                                             <div class="col-md-9">
-                                                <input type="date" name="date" class="form-control" required id="showDate" onchange="getTimeSlots()">
+                                                <input type="date" name="date" class="form-control" required
+                                                    id="showDate" onkeydown="return false" onchange="getTimeSlots()">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -59,7 +60,8 @@
                                                 <label for="showTime">Show Time</label>
                                             </div>
                                             <div class="col-md-9">
-                                                <select class="form-control" id="showTime" name="showTime" required></select>
+                                                <select class="form-control" id="showTime" name="showTime"
+                                                    required></select>
                                             </div>
                                         </div>
                                         <div class="row">
