--- a/views/theatre/users-activity.hbs
+++ b/views/theatre/users-activity.hbs
@@ -23,23 +23,31 @@
                         <table class="table border table-responsive-sm" id="data-table">
                             <thead class="bg-success text-white">
                                 <tr>
-                                    <th scope="col">ID</th>
+                                    <th scope="col">Sr.No</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Join Date</th>
+                                    <th scope="col">Email</th>
                                     <th scope="col">Last Book</th>
                                     <th scope="col">Status</th>
                                     <th scope="col">Amount</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                {{#each users}}
                                 <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>22-11-2020</td>
-                                    <td>22-11-2020</td>
-                                    <td><span class="border text-success px-3">Paid</span></td>
-                                    <td>$350.00</td>
+                                    <th scope="row" class="serialNumber"></th>
+                                    <td>{{this.name}}</td>
+                                    <td>{{this.email}}</td>
+                                    {{#if this.orderDetails.0.orderDate}}
+                                    <td>{{#parseDate this.orderDetails.0.orderDate}}{{/parseDate}}</td>
+                                    <td><span class="border {{#IF this.orderDetails.0.status '==' "booked"}}text-success{{else}}text-danger{{/IF}} text-uppercase px-3">{{this.orderDetails.0.status}}</span></td>
+                                    <td>Rs.{{this.orderDetails.0.totalAmount}}</td>
+                                    {{else}} 
+                                    <td>Nothing yet !</td>
+                                    <td><span class="border text-success text-uppercase px-3">...</span></td>
+                                    <td>...</td>
+                                    {{/if}}
                                 </tr>
+                                {{/each}}
                             </tbody>
                         </table>
                     </div>
