--- a/views/partials/admin-footer.hbs
+++ b/views/partials/admin-footer.hbs
@@ -4,7 +4,7 @@
             <a class="nav-link" href="#">Profile</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
+            <a class="nav-link" type="button" onclick="logout(event, '/admin/logout')">Logout</a>
         </li>
     </ul>
     <span class="copyright ml-auto my-auto mr-2">Copyright © 2021
