--- a/views/partials/admin-layout.hbs
+++ b/views/partials/admin-layout.hbs
@@ -1,32 +1,3 @@
-<div class="color-switcher animated">
-    <h5>Accent Color</h5>
-    <ul class="accent-colors">
-        <li class="accent-primary active" data-color="primary">
-            <i class="material-icons">check</i>
-        </li>
-        <li class="accent-secondary" data-color="secondary">
-            <i class="material-icons">check</i>
-        </li>
-        <li class="accent-success" data-color="success">
-            <i class="material-icons">check</i>
-        </li>
-        <li class="accent-info" data-color="info">
-            <i class="material-icons">check</i>
-        </li>
-        <li class="accent-warning" data-color="warning">
-            <i class="material-icons">check</i>
-        </li>
-        <li class="accent-danger" data-color="danger">
-            <i class="material-icons">check</i>
-        </li>
-    </ul>
-    <div class="close">
-        <i class="material-icons">close</i>
-    </div>
-</div>
-<div class="color-switcher-toggle animated pulse infinite">
-    <i class="material-icons">settings</i>
-</div>
 <div class="container-fluid">
     <div class="row">
         <!-- Main Sidebar -->
@@ -40,28 +11,7 @@
         </main>
     </div>
 </div>
-<div class="promo-popup animated">
-    <a href="https://vishnucprasad.github.io" class="pp-cta extra-action">
-        <img
-            src="https://avatars.githubusercontent.com/u/64061326?s=460&u=361cb89e920400e33326d1abbdcda9399f15f955&v=4">
-    </a>
-    <div class="pp-intro-bar"> Developer
-        <span class="close">
-            <i class="material-icons">close</i>
-        </span>
-        <span class="up">
-            <i class="material-icons">keyboard_arrow_up</i>
-        </span>
-    </div>
-    <div class="pp-inner-content">
-        <h2>Vishnu C Prasad</h2>
-        <p>Logical and results-driven Junior Web Developer.</p>
-        <div class="row px-2">
-            <a class="pp-cta extra-action mr-2" href="https://github.com/vishnucprasad">Github</a>
-            <a class="pp-cta extra-action" href="https://vishnucprasad.github.io">Personal Website</a>
-        </div>
-    </div>
-</div>
+{{>developer}}
 <script src="/assets/js/Chart.min.js"></script>
 <script src="/assets/js/jquery.sharrre.min.js"></script>
 <script src="/assets/js/extras.1.1.0.min.js"></script>
