--- a/views/admin/add-owners.hbs
+++ b/views/admin/add-owners.hbs
@@ -1,79 +1,51 @@
-<section>
-    <!-- main content start -->
-    <div class="main-content">
-
-        <!-- content -->
-        <div class="container-fluid content-top-gap">
-
-            <!-- breadcrumbs -->
-            <nav aria-label="breadcrumb" class="mb-4">
-                <ol class="breadcrumb my-breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Add Owners</li>
-                </ol>
-            </nav>
-            <!-- //breadcrumbs -->
-
-            <section class="pricing">
-                <div class="card card_border mb-5">
-                    <div class="cards__heading">
-                        <h3>Enter Owner Details</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="px-2 mb-4">
-                            <div class="row justify-content-center">
-                                <div class="col-md-8">
-                                    <form action="/admin/add-owners" method="POST">
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="ownerName">Owner Name</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="ownerName" class="form-control" required
-                                                    id="ownerName">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="theatreName">Theatre Name</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="theatreName" class="form-control" required
-                                                    id="theatreName">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="emailId">Email address</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="email" name="email" class="form-control" required id="emailId">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="phoneNumber">Phone Number</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="tel" name="phoneNumber" class="form-control" required
-                                                    id="phoneNumber">
-                                            </div>
-                                        </div>
-                                        <button type="submit"
-                                            class="btn btn-success float-right rounded-pill px-5">Submit</button>
-                                        <a href="/admin/theater-management" type="submit"
-                                            class="btn btn-danger float-right rounded-pill px-5 mr-3">Cancel</a>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+<div class="main-content-container container-fluid px-4">
+    <!-- Page Header -->
+    <div class="page-header row no-gutters py-4">
+        <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
+            <span class="text-uppercase page-subtitle">Action</span>
+            <h3 class="page-title">Add Owner</h3>
+        </div>
+    </div>
+    <!-- End Page Header -->
+    <!-- Default Light Table -->
+    <div class="row">
+        <div class="col">
+            <div class="card card-small mb-4 p-3">
+                <div class="card-header border-bottom">
+                    <div class="row">
+                        <h5 class="text-accent">Enter Owner Details</h5>
                     </div>
                 </div>
-            </section>
-
+                <div class="card-body p-0 py-3">
+                    <form action="/admin/add-owners" method="POST">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="ownerName">Owner Name</label>
+                                <input type="text" class="form-control" id="ownerName" name="ownerName" placeholder="Enter Owner Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="theatreName">Theatre Name</label>
+                                <input type="text" class="form-control" id="theatreName"
+                                     name="theatreName" placeholder="Enter Theatre Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="mobileNumber">Mobile Number</label>
+                                <input type="tel" class="form-control" name="phoneNumber" id="mobileNumber"
+                                    placeholder="Enter Mobile Number">
+                            </div>
+                        </div>
+                        <div class="text-right w-100">
+                            <a href="/admin/theater-management" class="btn btn-danger w-25">Cancel</a>
+                            <button type="submit" class="btn btn-accent w-25">Add</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <!-- //content -->
-
     </div>
-    <!-- main content end-->
-</section>
+    <!-- End Default Light Table -->
+</div>
