--- a/views/admin/theater-management.hbs
+++ b/views/admin/theater-management.hbs
@@ -37,9 +37,8 @@
                                 <td><a href="/admin/owner-details/{{this._id}}" class="btn btn-accent">View</a></td>
                                 <td>
                                     <div class="row justify-content-center">
-                                        <a href="/admin/edit-owner/{{this._id}}" class="btn btn-accent">Edit</a>
-                                        <a href="" class="btn btn-info mx-2 my-2 my-sm-0">Hold</a>
-                                        <button class="btn btn-danger" onclick="vex.dialog.confirm({ message: 'Are you sure you want to delete {{this.ownerName}} ?', callback: (value) => { if (value) deleteItem(event, '{{this._id}}', '/admin/delete-owner'); } });">Delete</button>
+                                        <a href="/admin/edit-owner/{{this._id}}" class="btn btn-accent mr-md-2">Edit</a>
+                                        <button class="btn btn-danger mt-2 mt-sm-0" onclick="vex.dialog.confirm({ message: 'Are you sure you want to delete {{this.ownerName}} ?', callback: (value) => { if (value) deleteItem(event, '{{this._id}}', '/admin/delete-owner'); } });">Delete</button>
                                     </div>
                                 </td>
                             </tr>
